syntax = "proto3";

package mangrobe.api;
import "google/protobuf/timestamp.proto";

service DataManipulationService {
  rpc GetCurrentSnapshot(GetCurrentSnapshotRequest) returns (GetCurrentSnapshotResponse);

  rpc AddFiles(AddFilesRequest) returns (AddFilesResponse);
  rpc ChangeFiles(ChangeFilesRequest) returns (ChangeFilesResponse);
  rpc CompactFiles(CompactFilesRequest) returns (CompactFilesResponse);
}

message GetCurrentSnapshotRequest {
  int64 table_id = 1;
  int64 stream_id = 2;
}

message GetCurrentSnapshotResponse {
  int64 stream_id = 1;
  optional int64 commit_id = 2;

  repeated File files = 3;
}

message File {
  string path = 1;
  int64 size = 2;
}

message AddFilesRequest {
  bytes idempotency_key = 1;
  int64 table_id = 2;
  int64 stream_id = 3;
  google.protobuf.Timestamp partition_time = 4;
  repeated FileAddEntry file_add_entries = 5;
}

message AddFilesResponse {
  int64 commit_id = 1;
}

message ChangeFilesRequest {
  // Must be shorter than 16 byte
  bytes idempotency_key = 1;
  int64 table_id = 2;
  int64 stream_id = 3;
  google.protobuf.Timestamp partition_time = 4;

  repeated FileAddEntry file_add_entries = 5;
}

message FileAddEntry {
  string path = 1;
  int64 size = 2;
}

message ChangeFilesResponse {
  int64 CommitId = 1;
}

message CompactFilesRequest {
  // Must be shorter than 16 byte
  bytes idempotency_key = 1;
  int64 table_id = 2;
  int64 stream_id = 3;
  google.protobuf.Timestamp partition_time = 4;

  repeated FileCompactSrcEntry src_file_entries = 5;
  FileCompactDstEntry dst_file_entry = 6;
}

message FileCompactSrcEntry {
  string path = 1;
}

message FileCompactDstEntry {
  string path = 1;
  int64 size = 2;
}

message CompactFilesResponse {
  int64 CommitId = 1;
}
